# libmrdsdb

./: .gitignore  CMakeLists.txt
include/: class_reference.h  connector.h  event_log.h  exception.hpp  log.hpp  magic.h  mrdsdb.h  mrdsdb_base.h  object_mgmt.h  object_port_status.h  parking.h  schema.hpp  transfer.h  vehicle_status.h
scripts/sql/ddl/: ddl_mrdsdb.sql
scripts/sql/dml/: mrdsdb_class_reference_carrier_class.sql  mrdsdb_class_reference_equipment_class.sql  mrdsdb_class_reference_event_class.sql  mrdsdb_configure_equipment_mgmt.sql  mrdsdb_configure_object_mgmt.sql  mrdsdb_configure_object_port_mgmt.sql  mrdsdb_configure_parking_mgmt.sql  mrdsdb_configure_region_mgmt.sql  mrdsdb_configure_vehicle_mgmt.sql  mrdsdb_configure_vendor_mgmt.sql  mrdsdb_messy_magic.sql  mrdsdb_production_event_log_vehicle.sql  mrdsdb_production_object_port_status.sql  mrdsdb_production_parking_status.sql  mrdsdb_production_transfer.sql  mrdsdb_production_transfer_processing.sql  mrdsdb_production_transfer_timestamp.sql  mrdsdb_production_transfer_view.sql  mrdsdb_production_universal_event_log.sql  mrdsdb_production_vehicle_status.sql
src/: class_reference.cpp  connector.cpp  event_log.cpp  magic.cpp  mrdsdb_base.cpp  object_mgmt.cpp  object_port_status.cpp  parking.cpp  transfer.cpp  vehicle_status.cpp
test/: CMakeLists.txt  test_class_reference.cpp  test_connector.cpp  test_event_log.cpp  test_magic.cpp  test_mrdsdb_base.cpp  test_object_mgmt.cpp  test_object_port_status.cpp  test_parking.cpp  test_transfer.cpp  test_vehicle_status.cpp
